--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,14 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* Noteworthy changes in release 2017.09.28 (2017-09-28) [stable]
+
+  The macros AX_PROG_HELP2MAN, AX_RECURSIVE_EVAL, AX_SUBDIRS_CONFIGURE,
+  AX_ELISP, and AX_PROG_EMACS have been added.
+
+  Various macros have received updates. Please check the ChangeLog file or the
+  history of the git repository for further details.
+
 * Noteworthy changes in release 2017.03.21 (2017-03-21) [stable]
 
   Obsolete macros AX_CXX_COMPILER_VENDOR, AX_GCC_LIBRARIES_DIR, AX_GCC_VERSION,
@@ -66,9 +74,9 @@
     - Support action-if-found and not-found hook
     - Export HAVE_GL, HAVE_GLU, and HAVE_GLUT preprocessor symbol
     - Add necessary flags to CFLAGS/LIBS by default, but can be disabled by
-      overwritting action-if-found hook.
+      overwriting action-if-found hook.
     - Fail the configure script if lib not found. This feature can be disabled
-      by overwritting action-if-not-found hook
+      by overwriting action-if-not-found hook
     - Fix problems on Mac OSX. Been tested on Linux (Ubuntu) and OSX
     - Use --with-xquartz-gl instead of --with-gl=x for using X11 on OSX
 
@@ -228,7 +236,7 @@
   AX_PERL_MODULE_VERSION: fix a misspelled variable name. Other unfixed issues
   remain. See <https://savannah.gnu.org/patch/index.php?8507>.
 
-  AX_BOOST_PYTHON: several issue have beeen fixed. Further details can be found
+  AX_BOOST_PYTHON: several issue have been fixed. Further details can be found
   at <https://savannah.gnu.org/patch/index.php?8540>.
 
   AX_HAVE_QT: Only check $PATH and qmake for Qt variables. The old logic for
@@ -391,7 +399,7 @@
   The new macro AX_PROG_SCALAC provides support for finding a Scala compiler.
   See <http://savannah.gnu.org/patch/index.php?8195> for further details.
 
-  The new macres AX_FIND_HAMCREST and AX_FIND_JUNIT have been added, which
+  The new macros AX_FIND_HAMCREST and AX_FIND_JUNIT have been added, which
   provide support for finding the jars of JUnit and Hamcrest. Please refer to
   <http://savannah.gnu.org/patch/index.php?8196> for further details.
 
@@ -516,7 +524,7 @@
   systems. See <http://savannah.gnu.org/patch/?7921> for further details.
 
   The new macro AX_LIB_EV has been added, which checks for libev in a
-  pkg-config-like manner. The purpose of the macro is to unifty behaviour
+  pkg-config-like manner. The purpose of the macro is to unify behaviour
   between distros that come with libev.pc and systems (e.g. upstream) that
   don't. Further details are at <http://savannah.gnu.org/patch/?7938>.
 
@@ -715,7 +723,7 @@
 
 * Noteworthy changes in release 2011.07.17 (2011-07-17) [stable]
 
-  A cut-and-paste error in AX_BOOST_FILESSYTEM has been fixed. See
+  A cut-and-paste error in AX_BOOST_FILESYSTEM has been fixed. See
   <http://savannah.gnu.org/patch/?7576> for further details.
 
   The macros AX_CHECK_SUNPRO_C and AX_LANG_COMPILER_MS are deprecated in favor
