--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,21 @@
 #+TITLE: GNU Autoconf Archive NEWS             -*- mode:org;fill-column:79; -*-
 #+STARTUP: showall
 #
-# Copyright (c) 2018 Autoconf Archive Maintainers <autoconf-archive-maintainers@gnu.org>
+# Copyright (c) 2019 Autoconf Archive Maintainers <autoconf-archive-maintainers@gnu.org>
 #
 # Copying and distribution of this file, with or without modification, are
 # permitted in any medium without royalty provided the copyright notice
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
+
+* Noteworthy changes in release 2019.01.06 (2019-01-06) [stable]
+
+  The Autoconf Archive now has its own organization on Github. Therefore, the
+  mirror has moved to https://github.com/autoconf-archive/autoconf-archive. The
+  old location, https://github.com/peti/autoconf-archive redirects there.
+
+  The macro AX_CODE_COVERAGE was modified to use AX_ADD_AM_MACRO_STATIC,
+  and thus unfortunately usage was changed.
 
 * Noteworthy changes in release 2018.03.13 (2018-03-13) [stable]
 
