--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
 * Noteworthy changes in release 2019.01.06 (2019-01-06) [stable]
 
   The Autoconf Archive now has its own organization on Github. Therefore, the
